--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,5 +1,9 @@
 /* your custom css */
 
+a{
+ color: #0000FF
+}
+
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
 
