--- a/website/static/main.css
+++ b/website/static/main.css
@@ -1,3 +1,7 @@
 img[src*="../img/hubs-cloud-aws-stack-setup.png"]{
 	max-width: calc(100% + 25vw);
 }
+
+img[src*="../img/hubs-cloud-aws-architecture.png"]{
+	max-width: calc(100% + 22vw);
+}
