Add alignment options for images/videos
What: Adds CSS classes to allow the alignment of images/videos to be specified, and documentation to the Readme file on how they can be used.

Why: By default, Docusaurus centers all images/videos and doesn't give you any options to change this; while this doesn't look bad for larger landscape images/videos, it doesn't look great for thin portrait images/videos.  This will allow for improved visual styling and more advanced page layouts.

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -18,3 +18,41 @@ a{
 
 @media only screen and (min-width: 1500px) {
 }
+
+/* alignment options */
+
+.image-align-left,
+.image-align-left img{
+    margin-left: unset;
+    margin-right: auto;
+}
+
+.image-align-center,
+.image-align-center img{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image-align-right,
+.image-align-right img{
+    margin-left: auto;
+    margin-right: unset;
+}
+
+.video-align-left,
+.video-align-left video{
+    margin-left: unset;
+    margin-right: auto;
+}
+
+.video-align-center,
+.video-align-center video{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.video-align-right,
+.video-align-right video{
+    margin-left: auto;
+    margin-right: unset;
+}
